# AI_DriveThrough_Project

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  env.example  setup-minio-public.sh
backend/: .gitignore  Dockerfile  README-deployment.md  README.md  alembic.ini  check_database.py  check_db.py  check_redis.py  conftest.py  deploy.sh  docker_data_export.sql  env.example  lambda_handler.py  main.py  pyproject.toml  pytest.ini  requirements-lambda.txt  reset_alembic.py  samconfig.toml  template.yaml
backend/alembic/: env.py
backend/alembic/versions/: 190e0dcd88ec_add_unit_cost_to_ingredients_and_.py  1d2d869303ab_initial_database_schema.py  20250919213507_seed_restaurant_data.py  27469c216978_next_migration.py  7c29fb1fcfff_add_missing_menu_item_tags_table.py  b3ec3307f428_initial_database_schema.py  c51ab00a2b47_add_is_special_to_menu_items.py
backend/app/: __init__.py
backend/app/agents/: workflow.py
backend/app/api/: admin.py  ai.py  restaurants.py  sessions.py
backend/app/commands/: __init__.py  add_item_command.py  answer_question_command.py  base_command.py  clarification_needed_command.py  clear_order_command.py  command_context.py  command_contract.py  command_data_validator.py  command_factory.py  command_invoker.py  command_type_schema.py  confirm_order_command.py  intent_classification_schema.py  (+9 more)
backend/import/: README.md  import_excel_prepared_data.json
backend/scripts/: clear_database.py  deploy_backend.py  generate_seed_migration.py  import_restaurant.py  run_import_ecs.py  run_migrations_ecs.py  simple_import.py
(+293 files in other folders)
